--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author"content="Jashanpreet">
     <meta name="description"content="INTRO TO CSS">
     <meta name="keyword" content="web,html,css,java,phyton">
-    <title>intro to BOM</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="./assets/style/index.css" media="all">
     <script src="./assets/script/index.js" defer></script>
 </head>
